--- a/Auth/.settings/org.eclipse.wst.common.component
+++ b/Auth/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="java-output-path" value="/nuBay_AuthServer/target/classes"/>
-        <property name="context-root" value="authServer"/>
+        <property name="context-root" value="authorization"/>
     </wb-module>
 </project-modules>
